# easypub

./: .flake8  LICENSE  README.md  doi_pub_parse.py  pyproject.toml  requirements.txt
easypub/: doi_pub_parse.py  test.txt
